--- a/views/names.erb
+++ b/views/names.erb
@@ -1,9 +1,7 @@
 <h1> Welcome to Rock Paper Scissors! </h1>
 <h2>Sign in to play</h2>
 <form action="/names" method="post">
-  <label for='player_name'>
     Player Name
   <input type="text" name="player_name">
-</label>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Go!">
 </form>
