--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,10 @@
 <h1><%="Welcome #{$player_1} to Rock Paper Scissors"%></h1>
+<form action="/rock" method="post">
+  <input type="submit" value="Rock">
+</form>
+<form action="/paper" method="post">
+  <input type="submit" value="Paper">
+</form>
+<form action="/scissors" method="post">
+  <input type="submit" value="Scissors">
+</form>
